Fixing user info to be displayed correctly on mobile

--- a/frontend/src/custom.scss
+++ b/frontend/src/custom.scss
@@ -34,5 +34,5 @@ $secondary: orange;
 }
 
 .user-info {
-  min-width: 800px;
+  min-width: 300px;
 }
